# IGames

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  example.env  pyproject.toml
alembic/: env.py
alembic/versions/: 44d48dbeda5a_initial.py
app/: constants.py  db.py  main.py  settings.py
app/data/: games.csv
app/models/: __init__.py  game.py  user.py
app/routers/: auth.py  game.py  user.py
app/schemas/: auth.py  game.py  user.py
app/scripts/: seed_games.py  seed_users.py
app/services/: game.py  user.py
app/utils/: auth.py  hashing.py
tests/: conftest.py
tests/test_routers/: test_auth.py  test_game.py  test_user.py
